--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,20 @@
     "version": "1.0",
     "description": "Add all noname people to join your meal",
     "manifest_version": 2,
-    "content_scripts": [{
-        "css": ["styles.css"],
-        "js": ["plugin.js"],
-        "matches": ["https://wolt.com/*"]
-    }]
+    "permissions": [
+      "storage"
+    ],
+    "content_scripts": [
+      {
+        "css": [
+          "styles.css"
+        ],
+        "js": [
+          "plugin.js"
+        ],
+        "matches": [
+          "https://wolt.com/*"
+        ]
+      }
+    ]
   }
