--- a/manifest.json
+++ b/manifest.json
@@ -42,6 +42,7 @@
         "match_about_blank": true
       }
     ],
+    "web_accessible_resources": ["/assets/icons/pimp-my-wolt-icon-48.png"],
     "icons": {
       "16": "/assets/icons/pimp-my-wolt-icon-16.png",
       "24": "/assets/icons/pimp-my-wolt-icon-24.png",
