--- a/manifest.json
+++ b/manifest.json
@@ -44,9 +44,17 @@
     ],
     "web_accessible_resources": [
       {
-        "resources": ["/assets/icons/pimp-my-wolt-icon-48.png"],
-        "matches": ["<all_urls>"],
-        "extension_ids": ["edfemdoibbcbmkojfdeldnllcbnpmfld"]
+        "resources": [
+          "/assets/loader.gif",
+          "/assets/icons/pimp-my-wolt-icon-48.png",
+          "/assets/icons/pimp-my-wolt-icon-128.png"
+        ],
+        "matches": [
+          "<all_urls>"
+        ],
+        "extension_ids": [
+          "edfemdoibbcbmkojfdeldnllcbnpmfld"
+        ]
       }
     ],
     "icons": {
