--- a/manifest.json
+++ b/manifest.json
@@ -14,17 +14,17 @@
       {
         "css": [
           "/src/styles.css",
-          "/src/ext/micromodal.css"
+          "/src/ext/micromodal.css",
+          "/src/wheel/wheelstyle.css"
         ],
         "js": [
           "/src/ext/micromodal.min.js",
           "/src/group-manager.js",
           "/src/bi-logger.js",
+          "/src/wheel/wheel-index.js",
           "/src/pimp-my-wolt.js"
         ],
-        "matches": [
-          "https://wolt.com/*"
-        ]
+        "matches": ["https://wolt.com/*"]
       },
       {
         "css": [
@@ -47,7 +47,10 @@
         "resources": [
           "/assets/loader.gif",
           "/assets/icons/pimp-my-wolt-icon-48.png",
-          "/assets/icons/pimp-my-wolt-icon-128.png"
+          "/assets/icons/pimp-my-wolt-icon-128.png",
+          "/assets/hungry_wheel.png",
+          "src/wheel/wheelstyle.css",
+          "src/wheel/wheel-index.js"
         ],
         "matches": [
           "<all_urls>"
@@ -62,5 +65,13 @@
       "24": "/assets/icons/pimp-my-wolt-icon-24.png",
       "48": "/assets/icons/pimp-my-wolt-icon-48.png",
       "128": "/assets/icons/pimp-my-wolt-icon-128.png"
+    },
+    "action": {
+      "default_icon": {
+        "16": "/assets/icons/pimp-my-wolt-icon-16.png",
+        "24": "/assets/icons/pimp-my-wolt-icon-24.png",
+        "48": "/assets/icons/pimp-my-wolt-icon-48.png"
+      },
+      "default_title": "Pimp My Wolt"
     }
   }
